--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,8 +25,12 @@ builds:
     ignore:
       - goos: freebsd
         goarch: arm
+      - goos: freebsd
+        goarch: arm64
       - goos: windows
         goarch: arm
+      - goos: windows
+        goarch: arm64
     binary: "uuid"
     flags:
       - -v
