add lambda logic

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+main
 
 # Test binary, built with `go test -c`
 *.test
@@ -13,5 +14,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-
 dist/
