don't pull bytes out when stringifying slice

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 *.dll
 *.so
 *.dylib
-main
+./main
+./lambda
+./cli
 
 # Test binary, built with `go test -c`
 *.test
@@ -15,3 +17,6 @@ main
 # Dependency directories (remove the comment below to include it)
 # vendor/
 dist/
+
+# Deploy Archive
+function.zip
